# oversoul

./: .gitignore  LICENSE  README.md  openapi.yaml
.github/workflows/: redocs.yml
engine/: Cargo.toml
engine/src/: chat.rs  lib.rs
engine/src/database/: mod.rs  sled.rs
engine/src/model/: cloud.rs  edge.rs  mlx.rs  mod.rs
engine/src/tool/: image.rs  mod.rs  search.rs  time.rs
engine/src/tool/code/: docker.rs  mod.rs  python.rs
engine/src/tool/mem/: mod.rs
lora/: pyproject.toml  setup.sh
lora/data/: answer.py  generate.py  question-en.jsonl  question-zh.jsonl
lora/prompt/: distill-zh.txt  distill.txt  system-zh.txt  system.txt  tool.json  user-zh.txt  user.txt
