[package]
name = "oversoul-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-lite = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde", "local-offset"] }
schemars = "0.9.0"
sled = "0.34.7"
rmp-serde = "1.3.0"
rustpython-vm = "0.4.0"
